infra/k8s/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: blackiefi-web
  namespace: blackiefi
spec:
  selector:
    app: blackiefi-web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackiefi-web
  namespace: blackiefi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackiefi-web
  template:
    metadata:
      labels:
        app: blackiefi-web
    spec:
      containers:
        - name: web
          image: blackiefi-registry.localhost:5001/blackiefi-web:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
