infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blackiefi
  namespace: blackiefi
spec:
  ingressClassName: traefik
  rules:
    - host: __APP_HOSTNAME__
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: blackiefi-api
                port:
                  number: 3001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blackiefi-web
                port:
                  number: 80
